Add GitHub Pages archive generator and LLM fallback resiliency